# play

./: Cargo.toml  justfile
hands_on_rust/hello_bterm/: Cargo.toml
hands_on_rust/hello_bterm/src/: main.rs
hands_on_rust/hello_your_name/: Cargo.toml
hands_on_rust/hello_your_name/src/: main.rs
rust_play/async_rust/examples/: use_thread.rs
rust_play/atomics_and_locks/: Cargo.toml
rust_play/atomics_and_locks/examples/: scoped_thread.rs  thread.rs
rust_play/atomics_and_locks/src/: main.rs
rust_play/bevy_newton/: Cargo.toml
rust_play/bevy_newton/examples/: simple.rs
rust_play/bevy_newton/src/: components.rs  lib.rs
rust_play/bevy_physics/: Cargo.toml
rust_play/bevy_physics/examples/: simple.rs
rust_play/bevy_playground/: Cargo.toml
rust_play/egui_play/: Cargo.toml
rust_play/egui_play/src/: main.rs
rust_play/extreme_bevy/: Cargo.toml
rust_play/extreme_bevy/.cargo/: config.toml
rust_play/extreme_bevy/src/: args.rs  components.rs  input.rs  main.rs
rust_play/flappy_bevy/: Cargo.toml
rust_play/flappy_bevy/src/: components.rs  main.rs  plugin.rs  setup.rs  system.rs  utils.rs
rust_play/mini_apps/: Cargo.toml
rust_play/mini_apps/examples/: .gdb_history  bevy_app_update.rs  bevy_asset.rs  bevy_asset_saver.rs  bevy_disable_entity.rs  bevy_fullscreen_wayland.rs  bevy_reborrow.rs  bevy_save_image_asset.rs  bevy_shapes.rs  bidi_unicode.rs  char.rs  nbody.rs  tmp_life.rs  use_ufbx.rs
rust_play/mini_apps/src/: main.rs
rust_play/pngme/: Cargo.toml
rust_play/rustc_dev/: Cargo.toml
rust_play/tiny_bevy/: Cargo.toml
wgpu_tutorial/bevy_test/: Cargo.toml
wgpu_tutorial/tutorial1_window/: Cargo.toml
wgpu_tutorial/tutorial1_window/src/: main.rs
wgpu_tutorial/tutorial2_surface/: Cargo.toml
wgpu_tutorial/tutorial2_surface/src/: main.rs
