[package]
name = "bevy_playground"
version = "0.1.0"
edition.workspace = true

[dependencies]

bevy = {git = "https://github.com/bevyengine/bevy.git", features = ["wayland", "dynamic_linking"]}
rand = "0.9.1"
ufbx = "0.8.0"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
 
# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
