[package]
name = "extreme_bevy"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
bevy = "0.16"
bevy_asset_loader = "*"
bevy_ggrs = {version = "*", features = ["wasm-bindgen"]}
bevy_matchbox = {version = "*", features = ["ggrs"]}
clap = { version = "*", features = ["derive"] }
