[package]
name = "mini_apps"
version = "0.1.0"
edition.workspace = true

[dependencies]

# bevy = {git = "https://github.com/bevyengine/bevy.git", features = ["wayland"]}
bevy = { path = "/home/vitalyr/projects/dev/rust-projects/bevy" }
bevy-inspector-egui = "*"
bevy_egui = "*"
image.workspace = true
rand = "*"
serde = "*"
serde_json = "*"
